[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Enemies/Enemy2/1.png" type="Texture" id=1]
[ext_resource path="res://Src/Enemies/Enemy2.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enemies/Enemy2/0.png" type="Texture" id=3]
[ext_resource path="res://Src/Weapons/EnemyAk47.tscn" type="PackedScene" id=4]
[ext_resource path="res://Src/Weapons/EnemyPistol.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 0.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": false,
"name": "death",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "norm",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5.33333 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Weapons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ), Vector2( -1, -5.333 ) ]
}

[node name="Enemy2" type="KinematicBody2D" groups=[
"Enemies",
]]
position = Vector2( 2, 55 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 4
script = ExtResource( 2 )
gravity = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.666667, -1.33333 )
shape = SubResource( 1 )

[node name="DeathSfx" type="AudioStreamPlayer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2.04848 )
frames = SubResource( 2 )
animation = "norm"
flip_h = true

[node name="Weapons" type="Node2D" parent="."]
position = Vector2( -1, -1.43244 )
scale = Vector2( 0.8, 0.8 )

[node name="EnemyAk47" parent="Weapons" instance=ExtResource( 4 )]
position = Vector2( 2.08, 2.6 )
scale = Vector2( 0.5, 0.5 )

[node name="EnemyPistol" parent="Weapons" instance=ExtResource( 5 )]
visible = false
position = Vector2( 2.08333, 0.123882 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 36.6667, 1.33333 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/float = SubResource( 3 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
